json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,156 @@
 {
  "items": [
   {
+    "id": "1so07MU6Q9Os56sqNdhL7w",
+    "url": "https://remote.co/job/senior-advisor-contract-counsel/",
+    "title": "Senior Advisor, Contract Counsel",
+    "tags": [
+      "DBG:surround``2N(anywher, remot)",
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Dell",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 17, 2018 5:23:05 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Senior Advisor, Contract Counsel at <span>Dell</span></h2><div><span><i></i> Remote</span>        </div><div>            <p>Remote Michigan, United States</p><p>R51543</p><p><strong>DESCRIPTION:</strong></p><p>Contracts Counsel</p><p>Dell Boomi is a rapidly growing company owned by Dell, with a fun team, widely spread geographically. We need someone pragmatic, to join the U.S. legal team, and to help get smart deals done. Required: Sense of humor, excitement about the growth, cool attitude about dealing with a large number of people and bringing folks together.</p><p><strong>This position is open to working remotely anywhere in the U.S.</strong></p><p><strong>Responsibilities</strong></p><p>The new Contracts Counsel will join a team within Dell that handles legal support for Boomi. Dells Boomi subsidiary is a global leader in providing integrated technology and services, to allow companies to let different computers and clouds talk to each other in real time. We have been number one or number two at the top of the Gartner Magic Quadrant for this type of cloud service, for years. We sign hundreds of new sales agreements per year so speed, good judgment, good communication skills, and experience with software licensing are all very important. Good humor and people sense are key, too.</p><p><strong>Duties:</strong></p><ul><li>Serve as the primary Legal escalation point for deals, and managing internal positions as to operational and risk issues presented in the contracts.</li><li>Writing legal documents and picking words carefully are key skills.</li><li>Collaborate with Sales, Operations, Finance, Legal, Tax, Insurance, Privacy, and IT Security groups to ensure that agreements meet Company policies and protect the Company’s interests.</li><li>Recognizing risks and solving problems in a team environment.</li><li>Most of the deals are time sensitive sales transactions so, providing time-sensitive support to Account Management teams while looking out for whats good for the business is critical. Business leaders need us to convey complex and legally complicated information in a concise and professional manner.</li><li>The right candidate is someone who is able to persuade people, and who can use creatively, think of solutions, and close issues.</li><li>Since the business is growing, flexibility to learn or propose new processes, or to think about new areas Legal should address, is valuable.</li></ul><p><strong>QUALIFICATION:</strong></p><strong></strong><p><strong>Experience and Qualifications</strong></p><ul><li>History handling negotiations</li><li>Commercial contracts manager or attorney with relevant experience in an in-house corporate legal or contracts management department or procurement, sales, or alliance role</li><li>Significant knowledge of the information technology industry and of related commercial contracts terms</li><li>Experience in negotiating software licenses and SaaS agreements preferred.</li><li>Demonstrated skills in providing effective support to other teams and understanding of corporate environments</li><li>Ability to multi-task, work efficiently in a high-energy environment, and collaborate effectively with management as both an advisor and business leader</li><li>Must possess excellent written and oral communication skills</li><li>Must want to keep learning and speak up if an issue needs attention</li><li>Be able to solve issues without needing extensive support; be comfortable conforming deals to various liability norms we set and evaluate for the overall business (feel free to argue for why any given deal is different), but never surprise your manager</li></ul><p>Other notes: Boomi Legal personnel are part of Dell Legal and are also specifically assigned to the Boomi business. Boomis leaders are spread around many locations; the Boomi CEO is in Philadelphia, this position reports to Boomi’s chief counsel, who is in San Diego.</p><p><strong>The successful applicant may be in any U.S. location.</strong></p><p><em>Dell is committed to the principle of equal employment opportunity for all employees and to providing employees with a work environment free of discrimination and harassment. All employment decisions at Dell are based on business needs, job requirements and individual qualifications, without regard to race, color, religion or belief, national, social or ethnic origin, sex (including pregnancy), age, physical, mental or sensory disability, HIV status, sexual orientation, gender identity and/or expression, marital, civil union or domestic partnership status, past or present military service, family medical history or genetic information, family or parental status, or any other status protected by the laws or regulations in the locations where we operate. Dell will not tolerate discrimination or harassment based on any of these characteristics.</em></p>        </div><div>        <a href='https://dell.wd1.myworkdayjobs.com/en-US/External/job/Remote---Michigan-United-States/Sr-Advisor--Contract-Counsel--17000JDT-_R51543-1' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
+    "id": "xB4BekmpToyPdkb4ScTJBw",
+    "url": "http://jobmote.com/jobs/22822-actuary-consultant-remote-opportunity",
+    "title": "Actuary Consultant - Remote Opportunity",
+    "tags": [
+      "DBG:surround``12N(work, OR(home,remot), 5N(OR(offic,headquart,onsit), OR(dai,daili,week,weekli,month,monthli)) )",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Howard Systems International",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 17, 2018 10:22:49 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Howard Systems seeks an <strong>Senior Level Actuary</strong> for a 9 month contract. </p><p>This is a remote opportunity for out of state candidates with the first week of work on site in Des Moines IA. </p><p>This role is for two Actuaries. Will need to have extensive experience/knowledge of universal life products, Index universal life and extensive spreadsheet knowledge.<br>Must have the ability/experience calculating policy values by hand. FSA Designation is preferred, with at least an ASA designation a must. </p><p>There are most likely &quot;Career ASAs&quot; out there that could be well suited for this work as well. </p><p>NEEDED: </p><p>ASA = Associate in the Society of Actuaries (3/4 actuary) </p><p><strong>FSA</strong> = Fellow in the Society of Actuaries (full actuary ) </p><p>Requirements: <strong>Must have universal life product knowledge experience and worked in this industry</strong><br><strong>and FSA designation is strongly desired.</strong></p><ul><li>provided by Dice Senior Actuary, universal life products, FSA or ASA, remote </li></ul></div></div><div></div></div></div>"
+  },
+  {
+    "id": "S9HVaXMWTVSgECa-BW-0HQ",
+    "url": "https://remoteok.io/jobs/68517",
+    "title": "Modern Tribe",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:css/frontend/6",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:k/t/w:javascript/frontend/3",
+      "DBG_TECH1:k/t/w:javascript/nodejs/3",
+      "DBG_TECH1:k/t/w:reactjs/frontend/32",
+      "DBG_TECH1:k/t/w:wordpress/php/10",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=4, go=0, nodejs=3, bigdata-ml=0, ruby=0, apple=2, java=1, gamedev=0, php=10, embedded=0, frontend=41}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "Modern Tribe",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 17, 2018 5:11:20 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<td><span><h2>Modern Tribe</h2></span><br><span><h3>Modern Tribe</h3></span></td><div><div>Modern Tribe is looking for an experienced UI/Front End Developer to join our team as a freelance contractor.<br>If you have experience with advanced JavaScript, frameworks including React and React Native and want to apply those skills on top of a variety of delivery systems, from integrations with large scale WordPress installs to custom backend and server side rendered platforms you’re probably a good match for this role.<br>You will enjoy unique challenges and build hybrid app systems or complex interactive UI’s alongside other Front End/Back End Developers that will require deep collaboration with your team. Performance optimization and testing will be a required skill set, and knowledge of the latest asset bundling systems with optimal performance configuration for them will be key. You will also implement designs accurately with progressive css/templating methods and work with the rest of the team to identify reusable code proactively, abstracting that to internal tools as applicable.<br>This opportunity is for a person ready to challenge themselves with a diverse team on a wide range of JavaScript intensive projects. We foster a collaborative and engaging environment, and are looking for people who want to grow our systems with us as we create the best interfaces and experiences we can for our clients.<br><br>**Inclusion Statement:**<br>Modern Tribe is committed to a culture that embraces diversity and inclusion. We foster an environment of collaboration, open engagement, fairness and respect regardless of differences in age, race, disability, national origin, gender identity, religion, sexual orientation or veteran status. As a hybrid workspace ranging from distributed contractors to traditional employees, we value the unique perspectives and experiences of our global team.<br>We come from all walks of life. We are small business owners. We are tattoo aficionados and 80’s movie buffs and ex-pats. We are homeschool teachers. We are single parents. We are musicians, college drop-outs, and entrepreneurs. We are travelers, feminists, runners, volunteers, and makers. We are a Modern Tribe.<br>Everyday we strive to fulfill our motto: live well and do good work. We hope you will consider joining us.<br><br>**Personal Competencies**<br>* Strong communication skills<br>* Experience working as part of a remote team<br>* Self-motivated, detail-oriented<br>* Strong organizational skills<br>* A methodical approach to all tasks<br>* Ability to prioritize workloads and meet deadlines<br>* Fluent English speaker<br><br>**Knowledge &amp; Experience**<br>* Extensive knowledge of modern JavaScript standards and patterns<br>* Experience with React and/or React Native<br>* Proficiency at local environment setup for app development, docker<br>* Experience with REST APIs<br>* Experience with async operations at scale and modern practices to handle them<br>* Advanced experience with state management<br>* Solid understanding of various styling approaches for UI Development (CSS Modules, Styled Components etc)<br>* Unit, snapshot and integration testing<br>* GIT<br><br>**Bonus Points**<br>* Examples of plugins / code that you’ve released to the open source community<br>* Experience with WordPress<br>* Experience with GraphQL<br>* Native app development (android, ios)<br><br>**Responsibilities**<br>* ARCHITECT Work to architect scalable and maintainable applications across a range of technologies.<br>* COLLABORATE Coordinate and communicate clearly and whenever needed with designers, back-end developers and other application devs<br>* SOLVE You will be presented with complex technical requirements and design robust solutions to fulfill them.<br><br>**Location**<br>Work from anywhere in North, Central or South America. If your timezone is outside of US business hours but you work at least 5+ hours of overlap each day, let’s chat. You must be fluent in English. You just need a computer and a strong wifi signal to support daily video chats with the Tribe.<br><br>**Compensation**<br>Pay range is between $50-$75 US per hour commensurate with qualifications and experience. We are currently looking for freelance contractors about 20 hours a week for this gig.<br><br>**Perks**<br>We believe that distributed working is a way of life. We understand what it means to work remotely. We offer consistency in expectations, payment, and support. We believe in learning from each other and fostering personal growth. You can expect to learn a lot while working with us.<br>(Also, if you work enough with us, we’ll bring you on the team trips.)<br><br>**Who We Are**<br>Modern Tribe, Inc. is a rapidly growing software &amp; design company. We develop custom solutions for some of the world’s largest companies, government institutions and smaller growing organizations. We pride ourselves on our ability to bridge people and technology and to bring the passion and dedication of an entrepreneur to every project. Our team is composed of talented employees and freelancers around North &amp; South America (and a smattering across the globe).<br><br>**Who You Are**<br>We love working with each other because we have built a culture that suits us well. We work primarily with freelancers and coordinate their talents for large projects. To be on our team, you must be:<br>* HAPPY Where there is a will, there is a way. Having a positive disposition allows us to achieve great things and to support each other.<br>* HELPFUL Always looking for ways that you can help others.<br>* CURIOUS It is essential that you have a passion for learning. Technology changes daily, and life has a way of constantly raising the bar.<br>* ACCOUNTABLE Our clients expect us to get the right thing done on budget and on time. Communicating expectations and meeting them is the cornerstone of success.<br>Personal <h2>Requirements</h2>Apply on our site http://m.tri.be/1a5z<p>See more jobs at <span>Modern Tribe</span></p><p>Visit <a href='http://tri.be' rel='nofollow'>Modern Tribe</a>'s website</p></div></div>"
+  },
+  {
+    "id": "SSJSmaWCS6qPK8chf9TH0A",
+    "url": "http://jobmote.com/jobs/22696-100-remote-energyip-mdm-consultant",
+    "title": "100% Remote - EnergyIP MDM Consultant",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``3N(locat,remot)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Artech Information Systems",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 16, 2018 10:21:01 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Hello,</p><p>My name is <strong>Manvendra</strong> and I'm a recruiter at Artech, the #1 largest women-owned IT staffing firm in the US. We are constantly on the lookout for professionals to fulfil the staffing needs of our clients, and we currently have a job opening that may interest you. Please find below, summary of the position.</p><p>If you are currently not in the job seeking market, feel free to refer this position to someone you may know to be a fit. However, should this position be of interest to you, please send me your resume or contact me directly at .</p><p><strong>Job Title: Data Management Practitioner</strong><br><strong>Duration: New Orleans, LA (100% Remote)</strong><br><strong>Location: 12+ Months</strong></p><p><strong>Job Description</strong></p><ul><li>Functional and Technical knowledge of Siemen's MDMS system with experience in,</li><li>Preface to Smart Grids</li><li>Data Architecture Principles</li><li>The EnergyIP Solution and components</li><li>Data Synchronization</li><li>Data Collection</li><li>Data Delivery</li><li>Configuration Tool experience</li><li>Reporting and billing process and functionality</li><li>Understanding of the data model</li><li>Validate errors and verify/edit service requests</li><li>Editing meter data</li><li>Analyze and resolved billing exceptions</li><li>Cancel single and multiple months</li><li>Device control transactions</li></ul><p><strong>Top 3 Skills:</strong></p><ul><li>EnergyIP &quot;8&quot;</li><li>Smart Metering</li><li>Knowledge of SAP ISU integration points with MDMS</li></ul><p><strong>Regards,</strong><br><strong>Manvendra Singh</strong><br><strong>Technical Recruiter</strong><br><strong>Artech Information Systems LLC</strong><br><strong>Office:</strong><br><strong>Email:</strong><br><strong>LinkedIn:</strong></p><ul><li>provided by Dice EnergyIP/ Meter Data Management/ MDM/ </li></ul></div></div><div></div></div></div>"
+  },
+  {
     "id": "Ts4sCJLwTbOOZ5ukOHeWSQ",
     "url": "http://jobmote.com/jobs/22674-cherwell-itsm-consultant-remote",
     "title": "Cherwell ITSM Consultant (Remote)",
