--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -379,7 +379,7 @@
       "sameAs": "https://angel.co/job_lists/1/browse_startups_table?startups[]=171649&listings[0][]=37677&listings[0][]=120532&listings[0][]=86122&listings[0][]=54021"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 100000,
       "maxValue": 150000,
       "info": "0.1% – 0.5%",
@@ -687,7 +687,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 60000,
       "maxValue": 115000,
       "info": "Equity",
@@ -782,7 +782,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 110000,
       "maxValue": 150000,
       "info": "",
@@ -837,7 +837,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 70000,
       "maxValue": 100000,
       "info": "0.0% – 0.25%",
@@ -900,7 +900,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 0,
       "maxValue": 80000,
       "info": "25.0% – 40.0%",
@@ -1000,7 +1000,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 35000,
       "maxValue": 60000,
       "info": "0.0% – 0.5%",
@@ -1050,7 +1050,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 45000,
       "maxValue": 90000,
       "info": "No Equity",
