--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -427,7 +427,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 30,
       "maxValue": 40,
       "info": "",
@@ -826,7 +826,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "GBP",
+      "currency": "£",
       "minValue": 1,
       "maxValue": 1,
       "info": "",
@@ -1249,7 +1249,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 60000,
       "maxValue": 120000,
       "info": "No Equity",
@@ -1608,7 +1608,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 120000,
       "maxValue": 200000,
       "info": "0.0% – 5.0%",
@@ -1662,7 +1662,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 40000,
       "maxValue": 120000,
       "info": "0.0% – 5.0%",
@@ -2533,7 +2533,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 0,
       "maxValue": 50000,
       "info": "5.0% – 10.0%",
@@ -2905,7 +2905,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 90000,
       "maxValue": 100000,
       "info": "0.5% – 0.8%",
@@ -2947,7 +2947,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 80000,
       "maxValue": 90000,
       "info": "0.1% – 0.4%",
@@ -2994,7 +2994,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 90000,
       "maxValue": 100000,
       "info": "0.25% – 0.25%",
@@ -3216,7 +3216,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 50000,
       "maxValue": 130000,
       "info": "No Equity",
@@ -3269,7 +3269,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "GBP",
+      "currency": "£",
       "minValue": 30000,
       "maxValue": 80000,
       "info": "No Equity",
@@ -3315,7 +3315,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 10000,
       "maxValue": 20000,
       "info": "No Equity",
@@ -3361,7 +3361,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 40000,
       "maxValue": 80000,
       "info": "0.0% – 1.5%",
@@ -3407,7 +3407,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 40000,
       "maxValue": 80000,
       "info": "0.0% – 1.5%",
@@ -3465,7 +3465,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 1000,
       "maxValue": 2000,
       "info": "No Equity",
@@ -3824,7 +3824,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 10000,
       "maxValue": 30000,
       "info": "No Equity",
@@ -3880,7 +3880,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 45000,
       "maxValue": 55000,
       "info": "1.0% – 1.0%",
@@ -4015,7 +4015,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 15000,
       "maxValue": 20000,
       "info": "1.0% – 2.0%",
@@ -4104,7 +4104,7 @@
       "sameAs": "UNSET"
     },
     "salary": {
-      "currency": "USD",
+      "currency": "$",
       "minValue": 2000,
       "maxValue": 1000,
       "info": "1.0% – 0.001%",
