json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,149 @@
 {
  "items": [
   {
+    "id": "sHCOp2hnSaG4SFDxT8ifEA",
+    "url": "http://jobmote.com/jobs/23021-senior-salesforce-consultant-engagement-manager-remote-opportunity",
+    "title": "Senior Salesforce Consultant / Engagement Manager (REMOTE OPPORTUNITY)",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``OR(travel,visit) W to 4W OR(offic,headquart,onsit)",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/go",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "go"
+    ],
+    "hiringOrganization": {
+      "name": "Zennify",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 20, 2018 7:21:57 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Job Description</p><p>Zennify is looking for a qualified candidate to join their team as a Senior Salesforce Consultant with a strong Financial Services Background. The individual will be responsible for managing strategic engagements with clients, including designing and delivering scalable solutions using Salesforce.com and other cloud-based technologies. The individual will work with a team to implement mid- and large-scale customer projects encompassing process analysis &amp; design, system requirements &amp; configuration, change management, training and deployment. Clients range from local, small and mid-sized companies to multi-national enterprise corporations and state and federal agencies.</p><p><strong>THIS IS A REMOTE POSITION.</strong> Zennify is headquartered in Boise, ID with another office located in Sacramento, CA. Working remote, candidates need to be prepared for up to 30% travel to both headquarters and client locations.</p><p>Must be eligible to work in the US as we are not currently sponsoring visas.</p><p><strong>Responsibilities</strong></p><p>· Lead delivery teams to execute all project implementation phases including project planning, requirements gathering, solution design, development, system and user testing, deployment, training and post go live support</p><p>· Manage customer relationships and day-to-day interactions &amp; escalations</p><p>· Oversee process driven customer conversations and workshops related to sales processes, customer service, marketing automation and operational processes</p><p>· Define project short and long-term goals, identify success criteria, and coordinate client and delivery resource roles and responsibilities</p><p>· Drive delivery teams to produce on­-time, high quality, scalable and suitable services and deliverables</p><p>· Contribute to pre-sales customer scoping sessions with the Business Development Team &amp; assist with project proposal development</p><p>· Contribute to a collaborative team environment by encouraging and leading solution brainstorming, internal knowledge sharing and skill development</p><p><strong>Qualities of the Ideal Candidate</strong></p><ul><li>Thrives in a team-based, high energy and fast-paced environment</li><li>Service-oriented and innately driven to produce outstanding customer satisfaction and results</li><li>Enjoys discovering, learning about and implementing new technologies</li><li>Analytical and prone to logically and methodically work through problems</li><li>Strong aptitude for prioritization and multi-tasking in a deadline-driven environment</li><li>A positive demeanor with exceptional interpersonal skills with respect to internal and external interactions and relationships</li><li>Ability to meet travel requirements, when applicable (no more than 20% travel expected)</li><li>A desire to proactively contribute to, and enhance, team outputs</li><li>Experience working in Financial Services or Banking</li><li>Working knowledge of integration software such as Mulesoft, Jitterbit, Informatica</li></ul><p><strong>Preferred Qualifications</strong></p><ul><li>One or more of the following Salesforce Certifications: Sales Cloud Consultant, Service Cloud Consultant, Community Cloud Consultant, Financial Services Cloud Accredidation</li><li>Strong Financial Services background</li><li>Experience working with one or more of the following platforms: Ncino, Core Logic, Orion, Loan Origination Systems</li><li>Understanding of Core Banking Systems (Fiserv, Symitar, etc)</li></ul><p>Company DescriptionAt Zennify, we know how to focus, build and balance. We know systems and can untangle even the most complex of technical messes to ensure everything is running in sync. Our expertise in the Salesforce suite of products has helped bring balance to hundreds of clients. We evaluate existing technologies, recommend unique cloud-based solutions and expertly build solutions. We take into account our clients' specific needs as well as their existing infrastructure to develop context laden, elegant solutions. Simply put, Zennify brings competing interests, incompatible systems and seemingly unlinked challenges into alignment to develop technology solutions that drive businesses forward. </p><p>Our team is comprised of gritty, passionate problem-solvers. We have the vision to create lasting, long-term solutions for our clients. Because we view our clients as partners, we're deeply invested in our work and the success of our projects. At Zennify, innovation is in our every breath. We're motivated to increase efficiencies and ultimately help the bottom line of our client's business. We dig deep. Zennify works hard to understand the needs of our clients and align those needs with working, effective solutions.</p></div></div><div></div></div></div>"
+  },
+  {
+    "id": "xD1-_b27SMqMShazzvFyzg",
+    "url": "https://remote.co/job/social-media-engagement-evangelist/",
+    "title": "Social Media Engagement Coordinator (Part-time, Fall)",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG_TECH1:k/t/w:spring/java/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=8, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/java",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "java"
+    ],
+    "hiringOrganization": {
+      "name": "MeetEdgar",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 20, 2018 5:34:26 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Social Media Engagement Coordinator (Part-time, Fall) at <span>MeetEdgar</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span> | <span> Part-time </span></div><div>            <h4><strong>Social Media Engagement Coordinator (Paid! Part-time, Fall)</strong></h4><p>Part-time, remote position, 15-20 hours/week.</p><p>This paid position ($15-18/hour) is a contract role that will last until the end of the 2018 year with the opportunity to extend into Spring.</p><p>We are a social media company in search of social media company. Do you love social media? Help us make our brand’s social media profiles worth #following.</p><h4><strong>About You</strong></h4><p>You are a social media junkie who loves to talk shop with sharp instincts and wit! This is a fast-paced job and you must have the drive to keep up and a passion to learn. You’re comfortable with direct feedback and can make rapid changes when needed.</p><p>Your style is conversational, compelling, and humorous. We don’t take ourselves too seriously and like our audience to have fun with the content that we create. You despise spammy, fake social media interactions. You create engaging, smart social content that will stand out from the endless stream of mediocre “business-y” posts and ads.</p><h4><strong>About The Job</strong></h4><p>You will help write, schedule, and manage our social media profiles (Facebook, Twitter, LinkedIn, Instagram) to increase followers and overall engagement, while maintaining our brand voice. This includes promoting our content and engaging our community members directly through Twitter chats, responding to mentions, and moderating organic conversations.</p><p>While this is a self-directed role, you’ll be working as part of a marketing team where you’ll receive support in direction, strategy, and opportunities for collaboration.</p><p>This is both a creative and a tactical position – you’ll dream up ways to get our audience excited, and execute them.</p><p><strong>Your duties will include:</strong></p><ul><li>Writing social media updates for our social channels</li><li>Moderating/engaging in comments on social media channels</li><li>Scheduling posts for our social channels</li><li>Reporting on performance</li></ul><h4><strong>Job Deets Cheat Sheet</strong></h4><p><strong>Your experience/skills:</strong></p><ul><li>Experience writing for a brand/business on social media and using analytics tools to show effectiveness</li><li>Attention to detail</li><li>Great writing and communication skills</li><li>Ability to take on our tone/voice</li></ul><p><strong>Requirements:</strong></p><ul><li>Consistent access to reliable, high-speed internet</li><li>A computer or laptop to work from during your work hours</li></ul><p><strong>Extra special bonus points for any of the following:</strong></p><ul><li>You are a MeetEdgar user!</li></ul>        </div><div>        <a href='https://ed.gr/SocialEvangelist' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
+    "id": "iNM6MuBJSgCYv60eRknRTA",
+    "url": "https://weworkremotely.com/remote-jobs/meetedgar-social-media-engagement-coordinator-paid-part-time-fall",
+    "title": "MeetEdgar : Social Media Engagement Coordinator (Paid! Part Time, Fall)",
+    "tags": [
+      "DBG:surround``headquart 3N remot",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "MeetEdgar",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 20, 2018 5:19:20 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Social Media Engagement Coordinator (Paid! Part Time, Fall)</h2><span>Company: MeetEdgar<br></span><span>Headquarters: Remote<br></span><span>http://meetedgar.com/careers/<br><br></span>  <div>    <div><span>You will help write, schedule, and manage our social media profiles (Facebook, Twitter, LinkedIn, Instagram) to increase followers and overall engagement, while maintaining our brand voice. This includes promoting our content and engaging our community members directly through Twitter chats, responding to mentions, and moderating organic conversations.</span></div>  </div>  <div>    <h4>Apply for this position</h4>    <p>Apply here: <a href='https://ed.gr/SocialCoordinator' rel='nofollow'>https://ed.gr/SocialCoordinator</a></p>  </div>"
+  },
+  {
+    "id": "ARnYX2owQeqlwDqMeJ3iVw",
+    "url": "https://remote.com/jobs/browse/preview/social-media-community-consultant",
+    "title": "Social Media / Community Consultant",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "TOKEN2049",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 20, 2018 4:34:11 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "JOB TYPE: Part Time<br /><br />EXPERIENCE: expert<br /><br />COMPANY: TOKEN2049; 1-10 employees; 50-75% remote;<br /><br />SKILLS:<br />• Community Management<br />• Social Media Marketing<br />• Marketing Strategy<br /><br />TOKEN2049 organizes the largest digital asset event in Asia on 13-14 March 2019 in Hong Kong, where we explore in-depth the growing crypto ecosystem. We are shining a light on the global developments of this new asset class, while taking a unique and widening perspective on the token industry and its opportunities. <br /><br />The inaugural TOKEN2049 conference in March 2018 hosted 60 speakers and +1,000 attendees from 50 countries, who gathered in Hong Kong at the Kerry Hotel, setting a new standard for crypto events in Asia.<br /><br />We are looking for a world-class Social Media and Community Management professional with relevant experience in the crypto and / or tech event space to: <br /><br />- Develop a Social Media strategy, from now through to the event on 13-14 March 2019, and the weeks thereafter. The plan should complement the existing CRM / Email communications timeline<br />- Define content pillars, content strategy, and tactical campaigns<br />- Define the execution strategy, broken down per channel to be used (Twitter, Reddit, Telegram, Meetup.com etc.)  <br />- Define robust templates for social media postings / post types - so execution can follow pre-set templates and guidelines<br />- Provide database of research / link bank to be used for execution<br />- Develop Community Management strategy: how will we engage / re-engage the community to generate qualified leads using Social Channels <br />- Think long-term - how will this communications plan help the event brand succeed going forward <br />- Provide social media execution leading up to the event - or provide introduction to a social media manager, who will be able to execute daily social media management based on the  consultant's plans, ideas and timelines.<br /><br />We are looking for immediate input. To indicate your interest, please share an estimate of total project duration (hours), and total project cost (USD)."
+  },
+  {
     "id": "90PvMMQsQ1-_igNi0WJqTA",
     "url": "https://remote.co/job/online-coding-instructor/",
     "title": "Online Coding Instructor",
